--- a/client/src/App.css
+++ b/client/src/App.css
@@ -128,8 +128,6 @@
 }
 
 .DropDownLink {
-  display: block;
-  text-decoration: none;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -139,6 +137,10 @@
   width: 97%;
   margin: 0 auto;
   padding: 10px 7px;
+}
+
+a {
+  text-decoration: none;
 }
 
 .DropDownLink:hover {
@@ -312,6 +314,113 @@
 .c3 {
   width: 238.47px;
   height: 385.87px;
+}
+
+/* cat info page styles */
+.CatInfoContainer {
+  /* border: 1px solid red; */
+  margin: 20px 0 120px 0;
+}
+
+.CatInfoDisplay {
+  display: flex;
+  width: 90%;
+  margin: 0 auto;
+  /* border: 1px solid blue; */
+  justify-content: space-between;
+}
+
+.CatInfoImage {
+  width: 371.04px;
+  height: 371.04px;
+  border-radius: 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-top: 25px;
+}
+
+.CatInfo {
+  width: 60%;
+}
+
+.CatInfoHeading {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+}
+
+.CatAbout {
+  width: 601px;
+  height: 88px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  margin: -10px 0 20px 0;
+}
+
+.RatingName {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  color: #000000;
+}
+
+.RatingName span {
+  font-weight: 700;
+}
+
+.CatRating {
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid blue; */
+  width: 60%;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.CatRatingTitle {
+  margin: 0;
+}
+
+.RatingBar {
+  display: flex;
+}
+
+.CatBar {
+  width: 40px;
+  height: 8px;
+  background: #544439;
+  border-radius: 8px;
+  margin: 5px;
+}
+
+.CatInfoPhotos {
+  /* border: 1px solid purple; */
+  margin-top: 50px;
+}
+
+.PhotoHeading {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  margin: 0 0 30px 0;
+}
+
+.MorePhotosContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.MorePhoto {
+  width: 278px;
+  height: 278px;
+  border-radius: 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 /* footer styles */
