--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,26 @@
   margin: 0 auto;
 }
 
+/* general styles */
+.Loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #636161; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* header styles */
 .HeaderContainer {
   margin-top: 20px;
@@ -84,6 +104,7 @@
 .SearchIcon {
   margin-right: 20px;
   color: #291507;
+  cursor: pointer;
 }
 
 .DropDown {
@@ -203,14 +224,16 @@ a {
   align-items: center;
 }
 
-.SeeMoreLink a {
-  text-decoration: none;
+.SeeMoreLink button {
   text-transform: uppercase;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
   color: rgba(41, 21, 7, 0.6);
-  margin-right: 5px;
+  border: none;
+  outline: none;
+  background: transparent;
+  cursor: pointer;
 }
 
 .SeeMoreLink i {
@@ -438,6 +461,7 @@ a {
 
 .SearchedBreed {
   display: flex;
+  flex-wrap: wrap;
   /* flex-direction: column; */
   /* align-items: center; */
   /* border: 1px solid green; */
